--- a/README
+++ b/README
@@ -1,8 +1,11 @@
-Chess software that is developed for fun.
+The chess software that is developed for fun.
+Initial creator is Leonid Rozenblyum
+(the last name could also be spelled as Rozenblium according to Ukrainian transliteration rules)
 
-Main goals for v1 are:
+Main goals for version1 are:
 support Winboard protocol v2
-know about all chess rules (including ambiguities with the 3'd position repetition and insufficient material).
+know about all chess rules (including ambiguities with the 3'd position repetition and insufficient material)
+be able to choose at least random 'correct according to rules' move.
 
 The license is described in LICENSE file.
 Please read it carefully before forking the repository.
