--- a/README
+++ b/README
@@ -3,7 +3,9 @@ Initial creator is Leonid Rozenblyum
 (the last name could also be spelled as Rozenblium according to Ukrainian transliteration rules)
 
 Main goals for version1 are:
-- support Winboard protocol v2
+- support Chess Engine Communication Protocol (http://home.hccnet.nl/h.g.muller/engine-intf.html)
+This protocol is one of de-facto standards in communicating between a chess GUI and an engine.
+The well-known GUI implementations are XBoard/Winboard
 - know about all chess rules (including ambiguities with the 3'd position repetition and insufficient material)
 - be able to choose at least random 'correct according to rules' move.
 
